--- a/adk_agent/changelog_template.html
+++ b/adk_agent/changelog_template.html
@@ -6,87 +6,142 @@
     <title>{{ project_name }} Changelog</title>
     <style>
         body {
-            font-family: 'Segoe UI', Arial, sans-serif;
-            line-height: 1.6;
-            max-width: 900px;
-            margin: 0 auto;
-            padding: 30px;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
             color: #333;
-            background-color: #f9f9f9;
-        }
-        h1 {
-            color: #1a3c66;
-            border-bottom: 3px solid #1a73e8;
-            padding-bottom: 10px;
-            font-size: 2.2em;
-        }
-        h2 {
-            color: #1a3c66;
-            font-size: 1.5em;
-            margin-top: 20px;
-        }
-        ul {
-            list-style-type: disc;
-            margin-left: 25px;
-            margin-bottom: 15px;
-        }
-        .metadata {
-            background-color: #e8f0fe;
-            padding: 15px;
-            border-radius: 8px;
-            margin-top: 25px;
-            font-size: 0.9em;
-        }
-        a {
-            color: #1a73e8;
-            text-decoration: none;
-            font-weight: 500;
-        }
-        a:hover {
-            text-decoration: underline;
+            line-height: 1.6;
         }
         .container {
-            background-color: #fff;
+            max-width: 900px;
+            margin: 40px auto;
             padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
-        table {
-            border-collapse: collapse;
-            width: 100%;
-            margin: 15px 0;
-        }
-        th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: left;
-        }
-        th {
-            background-color: #f4f4f4;
-        }
-        .header-logo {
+        header {
             text-align: center;
-            margin-bottom: 20px;
+            padding: 20px 0;
+            border-bottom: 2px solid #eee;
         }
-        .header-logo img {
-            max-width: 150px;
+        header h1 {
+            font-size: 2.5em;
+            margin: 0;
+            color: #007bff;
+        }
+        header .date {
+            font-size: 1.3em;
+            color: #555;
+            margin-top: 10px;
+        }
+        section {
+            margin: 30px 0;
+        }
+        section h2 {
+            font-size: 1.8em;
+            color: #333;
+            margin-bottom: 15px;
+            border-left: 4px solid #007bff;
+            padding-left: 10px;
+        }
+        .changes ul, .previous-state ul {
+            list-style-type: disc;
+            padding-left: 30px;
+        }
+        .changes ul li, .previous-state ul li {
+            margin-bottom: 12px;
+            font-size: 1.1em;
+        }
+        .previous-state {
+            background-color: #fafafa;
+            padding: 15px;
+            border-radius: 5px;
+        }
+        .meta {
+            font-size: 0.95em;
+            color: #666;
+            margin: 20px 0;
+        }
+        .meta p {
+            margin: 8px 0;
+        }
+        footer {
+            text-align: center;
+            padding: 20px 0;
+            border-top: 1px solid #eee;
+            font-size: 0.9em;
+            color: #777;
+        }
+        footer a {
+            color: #007bff;
+            text-decoration: none;
+            margin: 0 5px;
+        }
+        footer a:hover {
+            text-decoration: underline;
+        }
+        /* Responsive Design */
+        @media (max-width: 700px) {
+            .container {
+                margin: 20px;
+                padding: 15px;
+            }
+            header h1 {
+                font-size: 2em;
+            }
+            header .date {
+                font-size: 1.1em;
+            }
+            section h2 {
+                font-size: 1.5em;
+            }
+            .changes ul li, .previous-state ul li {
+                font-size: 1em;
+            }
         }
     </style>
 </head>
 <body>
-    <div class="header-logo">
-        <img src="https://via.placeholder.com/150x50?text=Logo" alt="{{ project_name }} Logo">
-    </div>
     <div class="container">
-        <h1>{{ project_name }} Changelog</h1>
-        {{ markdown_content | safe }}
-        <div class="metadata">
-            <p><strong>Confluence Page:</strong> <a href="{{ page_url }}">{{ page_url }}</a></p>
+        <header>
+            <h1>{{ project_name }} Changelog</h1>
+            <div class="date">{{ current_date }}</div>
+        </header>
+
+        <section class="changes">
+            <h2>What's Changed</h2>
+            <ul>
+                {{ markdown_content | safe }}
+            </ul>
+        </section>
+
+        <section class="previous-state">
+            <h2>Previous State</h2>
+            <ul>
+                {% if previous_state %}
+                    {{ previous_state | safe }}
+                {% else %}
+                    <li>No previous state information available.</li>
+                {% endif %}
+            </ul>
+        </section>
+
+        <div class="meta">
+            <p>Confluence Page: <a href="{{ page_url }}">{{ page_url }}</a></p>
             {% if commit_hash %}
-            <p><strong>Commit:</strong> {{ commit_hash }}</p>
+                <p>Commit: {{ commit_hash }}</p>
             {% endif %}
-            <p><strong>Generated:</strong> {{ current_date }}</p>
+            <p>Generated: {{ current_date }}</p>
         </div>
+
+        <footer>
+            <p>Explore more: 
+                <a href="https://example.com/docs" target="_blank">Documentation</a> | 
+                <a href="https://example.com/issues" target="_blank">Issue Tracker</a>
+            </p>
+        </footer>
     </div>
 </body>
 </html>
